--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,5 @@
 syntax: glob
+.dropbox
 # Ignore Visual Studio 2008 files
 *.obj
 *.exe
@@ -28,3 +29,4 @@ _ReSharper*/
 [Tt]est[Rr]esult*
 [Bb]uild[Ll]og.*
 *.[Pp]ublish.xml
+desktop.ini
