- FC-map extrapolation aborts calculation - Disabled Transient Correction (PHEM) - FirstRun-Flag in Config file to check if first run with valid license (Quick Start Guide prompt) - AT/TC still in development. Main input parameters in Gearbox file.

--- a/VECTO/VECTO.vbproj
+++ b/VECTO/VECTO.vbproj
@@ -379,7 +379,27 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\GRAPHi small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GRAPHi small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GRAPHi small.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GRAPHi small1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GRAPHi_small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Open-icon-small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\application-export-icon-small.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
