--- a/VECTO/VECTO.vbproj
+++ b/VECTO/VECTO.vbproj
@@ -109,6 +109,12 @@
     <Compile Include="ADVANCE\cADV.vb" />
     <Compile Include="cVECTO.vb" />
     <Compile Include="cVSUM.vb" />
+    <Compile Include="GUI\F_Welcome.Designer.vb">
+      <DependentUpon>F_Welcome.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\F_Welcome.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\F_ENG.Designer.vb">
       <DependentUpon>F_ENG.vb</DependentUpon>
     </Compile>
@@ -277,6 +283,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="File Browser\FB_FavDlog.resx">
       <DependentUpon>FB_FavDlog.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\F_Welcome.resx">
+      <DependentUpon>F_Welcome.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\F_ADVfzp.resx">
       <SubType>Designer</SubType>
