--- a/VECTO/VECTO.vbproj
+++ b/VECTO/VECTO.vbproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="cJSONparser.vb" />
     <Compile Include="cVECTO.vb" />
     <Compile Include="cVSUM.vb" />
     <Compile Include="GUI\F_FileSign.Designer.vb">
