--- a/VECTO/VECTO.vbproj
+++ b/VECTO/VECTO.vbproj
@@ -97,9 +97,8 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
-    <Reference Include="vectolic, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Licensing\License DLL\bin\Release\vectolic.dll</HintPath>
+    <Reference Include="vectolic">
+      <HintPath>..\..\VECTO-Lic\License DLL\bin\Release\vectolic.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
