--- a/VECTO/VECTO.vbproj
+++ b/VECTO/VECTO.vbproj
@@ -97,8 +97,9 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
-    <Reference Include="vectolic">
-      <HintPath>..\..\VECTO-Lic\License DLL\bin\Release\vectolic.dll</HintPath>
+    <Reference Include="vectolic, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\vectolic.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
