--- a/VectoCore/packages.config
+++ b/VectoCore/packages.config
@@ -3,5 +3,6 @@
   <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.NLog31" version="3.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
 </packages>
