reading engine only driving cycle

--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\Connector\Ports\Impl\TnInPort.cs" />
     <Compile Include="Models\Connector\Ports\Impl\TnOutPort.cs" />
     <Compile Include="Models\Connector\Ports\ITnPort.cs" />
+    <Compile Include="Models\SimulationComponent\Data\EngineOnlyDrivingCycle.cs" />
     <Compile Include="Models\SimulationComponent\Data\ModalResult.cs" />
     <Compile Include="Models\SimulationComponent\Data\ModalResultFields.cs" />
     <Compile Include="Models\SimulationComponent\Data\CombustionEngineData.cs" />
