--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -64,15 +64,19 @@
     <Compile Include="Models\Connector\Ports\Impl\TnOutPort.cs" />
     <Compile Include="Models\Connector\Ports\ITnPort.cs" />
     <Compile Include="Models\SimulationComponent\Data\EngineOnlyDrivingCycle.cs" />
-    <Compile Include="Models\SimulationComponent\Data\ModalResult.cs" />
-    <Compile Include="Models\SimulationComponent\Data\ModalResultFields.cs" />
+    <Compile Include="Models\SimulationComponent\Data\ModalResult.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Models\SimulationComponent\Data\CombustionEngineData.cs" />
     <Compile Include="Models\SimulationComponent\Data\Engine\FuelConsumptionMap.cs" />
     <Compile Include="Models\SimulationComponent\Data\Engine\FullLoadCurve.cs" />
+    <Compile Include="Models\SimulationComponent\Data\VectoCSVReader.cs" />
     <Compile Include="Models\SimulationComponent\ICombustionEngine.cs" />
     <Compile Include="Models\SimulationComponent\IDataWriter.cs" />
+    <Compile Include="Models\Connector\Ports\IInPort.cs" />
     <Compile Include="Models\SimulationComponent\Impl\CombustionEngine.cs" />
     <Compile Include="Models\SimulationComponent\Impl\Wheels.cs" />
+    <Compile Include="Models\Connector\Ports\IOutPort.cs" />
     <Compile Include="Models\SimulationComponent\IWheels.cs" />
     <Compile Include="Models\SimulationComponent\SimulationComponentData.cs" />
     <Compile Include="Models\SimulationComponent\VectoSimulationComponent.cs" />
