include logging also in test project

--- a/VectoCore/app.config
+++ b/VectoCore/app.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<configSections>
+		<sectionGroup name="common">
+			<section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+		</sectionGroup>
+		<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+	</configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -8,4 +14,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	<common>
+		<logging>
+			<factoryAdapter type="Common.Logging.NLog.NLogLoggerFactoryAdapter, Common.Logging.NLog31">
+				<arg key="configType" value="INLINE"/>
+			</factoryAdapter>
+		</logging>
+	</common>
+	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+		<targets>
+			<target xsi:type="Console" name="ConsoleLogger" error="true" />
+			<target xsi:type="File" name="LogFile" filename="${basedir}/logs/log.txt" layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
+		</targets>
+		<rules>
+			<logger name="*" minlevel="Info" writeTo="LogFile" />
+		</rules>
+	</nlog>
 </configuration>
