--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -80,10 +80,18 @@
     <Compile Include="Models\Connector\Ports\IOutPort.cs" />
     <Compile Include="Models\SimulationComponent\IWheels.cs" />
     <Compile Include="Models\SimulationComponent\VectoSimulationComponent.cs" />
+    <Compile Include="Models\Simulation\Cockpit\ICockpitComponent.cs" />
     <Compile Include="Models\Simulation\Data\EngineOnlyDrivingCycle.cs" />
     <Compile Include="Models\Simulation\Data\IModalDataWriter.cs" />
-    <Compile Include="Models\Simulation\Data\ModalResult.cs" />
-    <Compile Include="Models\Simulation\SimulationContainer.cs" />
+    <Compile Include="Models\Simulation\Data\ModalResult.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Models\Simulation\Impl\VehicleContainer.cs" />
+    <Compile Include="Models\Simulation\Cockpit\ICockpit.cs" />
+    <Compile Include="Models\Simulation\Cockpit\IEngineCockpit.cs" />
+    <Compile Include="Models\Simulation\Cockpit\IGearboxCockpit.cs" />
+    <Compile Include="Models\Simulation\Cockpit\IVehicleCockpit.cs" />
+    <Compile Include="Models\Simulation\IVehicleContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DataRowExtensionMethods.cs" />
     <Compile Include="Utils\VectoCSVFile.cs" />
@@ -95,6 +103,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
