--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -87,6 +87,13 @@
     <Compile Include="Models\Simulation\Data\ModalResult.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Models\Simulation\Impl\EngineOnlyTimeBasedVectoJob.cs" />
+    <Compile Include="Models\Simulation\IVectoJob.cs" />
+    <Compile Include="Models\Simulation\IVectoSimulator.cs" />
+    <Compile Include="Models\Simulation\Data\ModalDataWriter.cs" />
+    <Compile Include="Models\Simulation\Impl\SimulationFactory.cs" />
+    <Compile Include="Models\Simulation\Impl\VectoJob.cs" />
+    <Compile Include="Models\Simulation\Impl\VectoSimulator.cs" />
     <Compile Include="Models\Simulation\Impl\VehicleContainer.cs" />
     <Compile Include="Models\Simulation\Cockpit\ICockpit.cs" />
     <Compile Include="Models\Simulation\Cockpit\IEngineCockpit.cs" />
