--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -60,15 +60,19 @@
     <Compile Include="Exceptions\VectoExceptions.cs" />
     <Compile Include="Exceptions\VectoSimulationException.cs" />
     <Compile Include="Models\Connector\Connector.cs" />
+    <Compile Include="Models\Connector\Ports\IDriverDemandInPort.cs" />
+    <Compile Include="Models\Connector\Ports\IDriverDemandInProvider.cs" />
     <Compile Include="Models\Connector\Ports\IInShaft.cs" />
+    <Compile Include="Models\Connector\Ports\IDriverDemandOutPort.cs" />
+    <Compile Include="Models\Connector\Ports\IDriverDemandOutProvider.cs" />
     <Compile Include="Models\Connector\Ports\Impl\InPort.cs" />
     <Compile Include="Models\Connector\Ports\Impl\OutPort.cs" />
-    <Compile Include="Models\Connector\Ports\Impl\Port.cs" />
-    <Compile Include="Models\Connector\Ports\Impl\TnInPort.cs" />
-    <Compile Include="Models\Connector\Ports\Impl\TnOutPort.cs" />
     <Compile Include="Models\Connector\Ports\IOutShaft.cs" />
+    <Compile Include="Models\Connector\Ports\ITnInPort.cs" />
+    <Compile Include="Models\Connector\Ports\ITnOutPort.cs" />
     <Compile Include="Models\Connector\Ports\ITnPort.cs" />
     <Compile Include="Models\SimulationComponent\Data\CombustionEngineData.cs" />
+    <Compile Include="Models\SimulationComponent\Data\DrivingCycleData.cs" />
     <Compile Include="Models\SimulationComponent\Data\Engine\FuelConsumptionMap.cs" />
     <Compile Include="Models\SimulationComponent\Data\Engine\FullLoadCurve.cs" />
     <Compile Include="Models\SimulationComponent\Data\SimulationComponentData.cs" />
@@ -77,6 +81,8 @@
     <Compile Include="Models\SimulationComponent\IGearbox.cs" />
     <Compile Include="Models\SimulationComponent\Data\EngineOnlyDrivingCycleData.cs" />
     <Compile Include="Models\SimulationComponent\IDrivingCycle.cs" />
+    <Compile Include="Models\SimulationComponent\Impl\DistanceBasedDrivingCycle.cs" />
+    <Compile Include="Models\SimulationComponent\Impl\TimeBasedDrivingCycle.cs" />
     <Compile Include="Utils\IMemento.cs" />
     <Compile Include="Models\SimulationComponent\Impl\CombustionEngine.cs" />
     <Compile Include="Models\SimulationComponent\Impl\EngineOnlyGearbox.cs" />
